# CodeIDE

./: build.gradle.kts  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/: App.kt  MainActivity.kt  NativeLoader.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/: EditorView.kt  Extensions.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/exception/: LineException.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/languages/: KTreesitterLanguage.kt  KTreesitterParser.kt  KTreesitterStyler.kt  KTreesitterSuggestionProvider.kt  LanguageManager.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/lanuage/base/: Language.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/model/: ColorScheme.kt  ErrorSpan.kt  FindParams.kt  FindResult.kt  FindResultSpan.kt  StyleSpan.kt  SyntaxHighlightResult.kt  SyntaxHighlightSpan.kt  TabWidthSpan.kt  TextChange.kt  TokenType.kt  UndoStack.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/plugin/autocomplete/: Actions.kt  AutoCompletePlugin.kt  SuggestionAdapter.kt  SymbolsTokenizer.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/plugin/autoindent/: Actions.kt  AutoIndentPlugin.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/plugin/base/: EditorPlugin.kt  PluginContainer.kt  PluginSupplier.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/plugin/delimiters/: Actions.kt  BracketsHighlightPlugin.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/plugin/dirtytext/: Actions.kt  DirtyTextPlugin.kt  OnChangeListener.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/utils/: EditorTheme.kt  Extensions.kt  Reflection.kt  StylingTask.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/editor/widget/: TextProcessor.kt  TextScroller.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/java/: TreeSitterJava.kt
composeApp/src/androidMain/kotlin/com/aegisdev/ktreesitter/python/: TreeSitterPython.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/com/aegisdev/ktreesitter/: EditorState.kt  SyntaxHiglighter.kt
composeApp/src/commonMain/kotlin/com/aegisdev/ktreesitter/java/: TreeSitterJava.kt
composeApp/src/main/cpp/: CMakeLists.txt  jni-bridge-python.c  jni-bridge.c
composeApp/src/main/cpp/grammars/tree-sitter-python/queries/: highlights.scm
composeApp/src/main/main/kotlin/com/blacksquircle/ui/editorkit/: Extensions.kt
gradle/: libs.versions.toml
(+61 files in other folders)
